generated/checkers/refine/KN-Double-Free-5aa2184e-2/build_logs/syntax-repair-refine-1-0/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In lambda function:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:395:33: error: ‘class llvm::APInt’ has no member named ‘isNullValue’
  395 |           return IL->getValue().isNullValue(); // zero
      |                                 ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::labelNameLooksErrorish(const clang::LabelStmt*) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:433:12: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
  433 |   return N.contains_lower("err") || N.contains_lower("error") ||
      |            ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:433:39: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
  433 |   return N.contains_lower("err") || N.contains_lower("error") ||
      |                                       ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:434:12: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
  434 |          N.contains_lower("fail") || N.contains_lower("free") ||
      |            ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:434:40: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
  434 |          N.contains_lower("fail") || N.contains_lower("free") ||
      |                                        ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:435:12: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
  435 |          N.contains_lower("cleanup") || N.contains_lower("out_err");
      |            ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:435:43: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
  435 |          N.contains_lower("cleanup") || N.contains_lower("out_err");
      |                                           ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::gotoLooksErrorish(const clang::GotoStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:456:11: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
  456 |     if (N.contains_lower("err") || N.contains_lower("error") ||
      |           ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:456:38: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
  456 |     if (N.contains_lower("err") || N.contains_lower("error") ||
      |                                      ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:457:11: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
  457 |         N.contains_lower("fail") || N.contains_lower("free") ||
      |           ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:457:39: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
  457 |         N.contains_lower("fail") || N.contains_lower("free") ||
      |                                       ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:458:11: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
  458 |         N.contains_lower("cleanup") || N.contains_lower("out_err"))
      |           ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:458:42: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
  458 |         N.contains_lower("cleanup") || N.contains_lower("out_err"))
      |                                          ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:453:22: warning: unused variable ‘LS’ [-Wunused-variable]
  453 |     const LabelStmt *LS = nullptr;
      |                      ^~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
